# Cloud-archive-Project

./: .gitignore  README.md  main  requirments.md
client/: CLIENT.md  CMakeLists.txt  client.cpp  client.h  ftclient  main.cpp  makefile  users.txt
server/: CMakeLists.txt  Makefile  README.md  client.c  ftserve  main.cpp  makefile  server.c  server.crt  server.h  server.key  users.txt
server/include/: authentification.h  command.h  command_handler.h  connection.h  error_handler.h  file_handler.h  ftp_commands.h  network.h  server.h  socket.h  socket_utils.h  utilities.h
server/src/: CMakeLists.txt  authentification.cpp  command_handler.cpp  error_handler.cpp  file_handler.cpp  ftp_commands.cpp  main.cpp  server.cpp  socket.cpp  socket_utils.cpp  utilities.cpp
server/src/classes/: command.cpp  connection.cpp  network.cpp  server.cpp
ssl/: SSL.md
